# ble_over_websocket

./: main.py  pyproject.toml  setup.venv.bat
custom_bleak/: client.py  manager.py
examples/: connect_synchronous.py
scripts/: bleak_scanner.py  setup.venv.ps1
utils/: logconfig.py  logging_config.json  paths.py  tracing.py
