[tool.poetry]
name = "ble-over-websocket"
version = "0.0.1"
description = ""
authors = ["plge"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.12"
bleak = "^0.21.1"
websockets = "^12.0"
pip = "^24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

